Fixed alignment issue with header items

--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,13 @@ footer {
 /* ===Main section=== */
 #main {
   margin-top: 6.42857em;
-  overflow: visible; }
+  overflow: visible;
+  *zoom: 1; }
+  #main:before, #main:after {
+    content: " ";
+    display: table; }
+  #main:after {
+    clear: both; }
   @media only screen and (max-width: 30em) {
     #main {
       margin-top: 1.42857em; } }
@@ -163,12 +169,12 @@ article {
   article .content {
     padding: 0 1.42857em; }
   article header {
-    padding: 1.42857em 1.42857em 0 1.42857em; }
+    padding: 3.57143em 1.42857em 0 1.42857em; }
     article header .post-format {
       width: 2.85714em;
       height: 2.85714em;
-      left: -2.85714em;
-      top: 2.14286em;
+      left: 1.42857em;
+      top: 0em;
       position: absolute;
       background-color: #e86a4d; }
     article header .post-date {
@@ -180,9 +186,18 @@ article {
       background-color: #ccc;
       width: 4.28571em;
       height: 1.78571em;
-      top: 5.92857em;
-      left: -4.28571em;
+      left: 5.07143em;
+      top: 0em;
       position: absolute; }
+    @media only screen and (min-width: 87.42857em) {
+      article header {
+        padding-top: 1.42857em; }
+        article header .post-format {
+          left: -2.85714em;
+          top: 2.14286em; }
+        article header .post-date {
+          top: 5.92857em;
+          left: -4.28571em; } }
   article footer {
     padding: 0.71429em 1.42857em;
     border-top: 1px solid #eee;
